@@ -111,6 +111,7 @@ menuDataStruct	menuData[]=
 		{MENU_FIND_IN_DOCS_LABEL,GTK_STOCK_FIND,0,0,(void*)&doxyDocs,SEARCHDOXYMENUNAME,NULL},
 		{MENU_GO_BACK_LABEL,GTK_STOCK_GO_BACK,0,0,(void*)&navigateHistory,GOBACKMENUNAME,(void*)NAVLAST},
 		{MENU_GO_FORWARD_LABEL,GTK_STOCK_GO_FORWARD,0,0,(void*)&navigateHistory,GOFORWARDMENUNAME,(void*)NAVNEXT},
+		{MENU_CONTINUE_LABEL,GTK_STOCK_MEDIA_PLAY,0,0,(void*)&sendOK,CONTINUEMENUNAME,NULL},
 //functions
 //bookmarks
 //tools
@@ -1824,6 +1825,8 @@ void buildMenus(void)
 	goBackMenu=newMenuItem(MENUBACK,menu);
 //go foward
 	goForwardMenu=newMenuItem(MENUFORWARD,menu);
+//continue
+	menuitem=newImageMenuItem(MENUCONTINUE,menu);
 
 //function menu
 	funcMenu=gtk_menu_item_new_with_label(MENU_FUNC_MENU_LABEL);
