@@ -29,7 +29,7 @@
 //callbacks
 enum {MENUNEW=0,MENUOPEN,MENUOPENHEX,MENUNEWADMIN,MENUNEWED,MENUMANED,MENUDOXY,MENURECENT,MENUSAVE,MENUSAVEAS,MENUSAVEALL,MENUSAVESESSION,MENURESTORESESSION,MENUPRINT,MENUCLOSE,MENUCLOSEALL,MENUREVERT,MENUQUIT,MENUUNDO,MENUREDO,MENUUNDOALL,MENUREDOALL,MENUCUT,MENUCOPY,MENUPASTE,MENUFIND,MENUNEXT,MENUSORTTABS,MENUSHOWTABS,MENUSELECTTAB,MENUPREFS,MENUPLUGPREFS,MENUSHOWDOCS,MENUSHOWBMBAR,MENUHIDEBMBAR,MENUHIDETOOLBAR,MENUSHOWTOOLBAR,MENUHIDETOOLOUT,MENUSHOWTOOLOUT,MENUHIDESTATUS,MENUSHOWSTATUS,MENUSHOWVIEWER, \
 MENUTOGGLENUMBERS,MENUWRAPLINES,MENUHILITELINE,MENUSYNTAXHILITE,MENUSHOWSPACE,MENUSHOWCOMPS \
-,MENUGOTODEF,MENUOPENINC,MENUGOTOLINE,MENUSEARCHDEF,MENUSEARCHGTK,MENUSEARCHQT,MENUSEARCHDOXY,MENUBACK,MENUFORWARD,MENUTOOLS,MENUABOUT,MENULOCALHELP,MENUONLINE,MENUGETPLUGS, \
+,MENUGOTODEF,MENUOPENINC,MENUGOTOLINE,MENUSEARCHDEF,MENUSEARCHGTK,MENUSEARCHQT,MENUSEARCHDOXY,MENUBACK,MENUFORWARD,MENUCONTINUE,MENUTOOLS,MENUABOUT,MENULOCALHELP,MENUONLINE,MENUGETPLUGS, \
 POPADDCUSTOM,MENUBLANK,MENUSPELLCHECK, \
 TABFOLDERPATH,TABFILEPATH,TABFILENAME,TABSPELLCHECK,TABSRCHILITE,TABHIDE \
 };
